Chapter 09/terraform/eks-secondary/routetable.tf
resource "aws_route_table" "private-routetable" {
  vpc_id = aws_vpc.eks-vpc.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat-gw.id
  }

  tags = {
    Name               = "Private Route Table"
    CreatedBy          = "James Odeyinka"
    DateCreated        = "03-19-2023"
    Env                = "Demo"
  }
}

resource "aws_route_table" "public-routetable" {
  vpc_id = aws_vpc.eks-vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.eks-vpc-igw.id
  }

  tags = {
    Name = "Public Route Table"
    CreatedBy          = "James Odeyinka"
    DateCreated        = "03-19-2023"
    Env                = "Demo"
  }
}

resource "aws_route_table_association" "private-us-east-1a" {
  subnet_id      = aws_subnet.private-us-east-1a.id
  route_table_id = aws_route_table.private-routetable.id
}

resource "aws_route_table_association" "private-us-east-1b" {
  subnet_id      = aws_subnet.private-us-east-1b.id
  route_table_id = aws_route_table.private-routetable.id
}

resource "aws_route_table_association" "public-us-east-1a" {
  subnet_id      = aws_subnet.public-us-east-1a.id
  route_table_id = aws_route_table.public-routetable.id
}

resource "aws_route_table_association" "public-us-east-1b" {
  subnet_id      = aws_subnet.public-us-east-1b.id
  route_table_id = aws_route_table.public-routetable.id
}
